--- a/css/style.css
+++ b/css/style.css
@@ -53,15 +53,21 @@ header {
     align-items: center;
     justify-content: space-between;
 
-    width: 90%;
+    width: 75%;
 
     margin: 0 auto;
     margin-top: 30px;
-    padding: 12px 80px;
+    padding: 11px 80px;
     
     border: 5px solid var(--borders-color);
     border-radius: 15px;
     background-color: none;
+}
+
+/* Logo da PCI */ 
+
+.logo-PCI-escrita img {
+    height: 70px;
 }
 
 /* Navegação do header */
@@ -82,7 +88,7 @@ header nav a {
     color: var(--terciary-color);
 
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
 }
 header nav a::after {
@@ -121,12 +127,95 @@ header .icon-telefone {
     transition: transform 0.8s ease, background-color 0.8s ease; 
 }
 
+.icon-telefone img {
+    width: 35px;
+    height: 35px;
+}
+
 header .icon-telefone:hover {
     background-color: var(--borders-color);
 
     transform: scale(1.2);
 
     cursor: pointer;
+}
+
+/* Responsividade para o celular */
+
+.logo-PCI {
+    display: none
+}
+
+.menu-lateral {
+    display: none;
+
+    font-size: 30px;
+
+    cursor: pointer;
+}
+
+@media (max-width: 1025px) {
+
+    header {
+        flex-direction: row;
+        position: relative;
+
+        padding: 12px 10px;
+
+        border: none;
+        border-bottom: 3px solid var(--borders-color);
+        border-radius: 0;
+    }
+
+
+    .logo-PCI-escrita {
+        display: none;
+    }
+
+    /* ícones do header responsivo */
+
+    .menu-lateral {
+        display: block;
+    }
+
+    .logo-PCI {
+        display: block;
+    }
+
+    .logo-PCI img {
+        height: 40px;
+    }
+
+   /* Header lateral */
+
+   .header-nav {
+        opacity: 0;
+        position: absolute;
+        top: 100%;
+        left: 0%;
+
+        width: 100%;
+        padding: 50px 20px;
+
+        background-color: var(--background-color-2);
+        border: 4px solid var(--borders-color);
+        border-radius: 6px;
+
+        transform: translateX(-100%); /* Move 100% pra esquerda */
+         transition: transform 0.65s ease, opacity 0.65s ease;
+   }
+
+   .header-nav nav ul {
+        flex-direction: column;
+        gap: 20px;
+   }
+
+   .header-nav.open {
+        opacity: 1;
+        pointer-events: 1;
+        transform: translateX(0);
+   }
+
 }
 
 /* 
