--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ header .icon-telefone:hover {
         border-radius: 6px;
 
         transform: translateX(-100%); /* Move 100% pra esquerda */
-         transition: transform 0.65s ease, opacity 0.65s ease;
+        transition: transform 0.65s ease, opacity 0.65s ease;
    }
 
    .header-nav nav ul {
@@ -222,7 +222,100 @@ header .icon-telefone:hover {
 -------------------------------------------------------- 
 */
 
+/* Início */
 
+section {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
+#apresentacao {
+    display: flex;
+
+    padding: 110px 20px;
+    gap: 150px;
+}
+
+.apt-foto {
+    width: 400px;
+    height: 300px;
+
+    background-color: none;
+    border: 5px solid var(--borders-color);
+    border-radius: 10px;
+}
+
+.apt-texto {
+    max-width: 410px;
+    font-size: 22px;
+}
+
+.apt-sub-texto {
+    display: flex;
+    flex-direction: column;
+
+    max-width: 510px;
+
+    margin-top: 20px;
+    gap:6px;
+}
+
+.apt-sub-lista {
+    display: flex;
+    align-items: center;
+    
+    width: 510px;
+}
+
+.apt-sub-texto img{
+    rotate: 90deg;
+
+    width: 40px;
+    height: 35px;
+}
+
+.apt-sub-texto p{
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.apt-botao {
+    display: flex;
+
+    width: 510px;
+
+    padding: 12px;
+    gap: 19px;
+
+    border-radius: 10px;
+
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.apt-botao a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width:180px;
+
+    padding: 10px;
+    gap: 10px;
+    margin-top: 20px;
+
+    border: 3px solid var(--primary-color);
+    border-radius: 10px;
+    
+    text-decoration: none;
+}
+
+.apt-botao img {
+    width: 20px;
+    height: 20px;
+}
 
 
 
