--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,7 @@ section {
     transform: translateX(-50px);
 }
 
+/* Animação slide In */
 
 @keyframes slideIn {
     0% {
@@ -289,7 +290,7 @@ section {
 }
 
 
-/* Animação slide In */
+/* Ativação da animação slide In */
 .apt-sub-lista.animate {
     animation: slideIn 0.6s ease forwards;
 }
@@ -337,8 +338,30 @@ section {
     text-decoration: none;
 
     cursor: pointer;
-    transform: scale(1);
+    
+    opacity: 0;
+    
+    transform: translateY(50px);
     transition: transform 1s ease, background-color 1s ease;
+    
+}
+
+/* Animação slide pra cima */
+@keyframes slideUp {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Ativação da Animação  */
+
+.apt-botao a.animate {
+    animation: slideUp 0.6s ease forwards;
 }
 
 .apt-botao img {
@@ -348,7 +371,7 @@ section {
 
 .apt-botao a:hover {
     background-color: var(--primary-color);
-    transform: scale(1.1);
+    transform: translateY(0) scale(1.1); 
 }
 
 /* 
