iniciei a construção da página sobre nós

--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,13 @@ section {
 -------------------------------------------------------- 
 */
 
+/* SOBRE NÓS */
+    
+
+/* 
+-------------------------------------------------------- 
+*/
+
 /* 
 (Páginas) Responsividade para o celular 
 */
