--- a/css/style.css
+++ b/css/style.css
@@ -811,6 +811,7 @@ body.sobrenos .animate-foto {
     justify-content: space-between;
     transition: transform 0.3s ease;
     height: 700px; 
+    cursor: pointer;
 }
 
 .proj-card:hover {
@@ -1007,6 +1008,9 @@ body.sobrenos .animate-foto {
     flex: 1;
     min-width: 400px;
     max-width: 600px;
+    padding: 10px;
+    background-color: var(--secondary-color);
+    border-radius: 10px;
 }
 
 #mapa iframe {
@@ -1040,6 +1044,39 @@ body.sobrenos .animate-foto {
     border-radius: 10px;
     box-shadow: 0 0 10px 1px black;
 }
+
+.redes-sociais {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 50px
+    
+}
+
+.redes-sociais img {
+    width: 45px;
+    height: 45px;
+}
+
+.redes-sociais a {
+    background-color: var(--secondary-color);
+
+    border-radius: 10px;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.redes-sociais a:hover {
+    background-color: var(--primary-color);
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 
 /* 
 -------------------------------------------------------- 
@@ -1392,7 +1429,7 @@ body.sobrenos .animate-foto {
     }
 
     .local-titulo h1 {
-        font-size: 36px;
+        font-size: 40px;
     }
 
     .oe-lista li {
