--- a/css/style.css
+++ b/css/style.css
@@ -721,10 +721,27 @@ body.sobrenos .animate-foto {
 .valores-lista {
     display: flex;
     align-items: center;
-    
     padding: 10px;
     width: 350px;
     gap: 5px;
+
+    opacity: 0;
+    transform: translateX(-50px);
+}
+
+@keyframes slideInValores {
+    0% {
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.valores-lista.animate {
+    animation: slideInValores 0.6s ease forwards;
 }
 
 .valores-lista img{
@@ -811,7 +828,6 @@ body.sobrenos .animate-foto {
     justify-content: space-between;
     transition: transform 0.3s ease;
     height: 700px; 
-    cursor: pointer;
 }
 
 .proj-card:hover {
